# thatstui

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
src/thatstui/: __init__.py  __main__.py  hub.py
src/thatstui/core/: __init__.py  engine.py  game.py  i18n.py  persistence.py
src/thatstui/games/: __init__.py  ant_colony.py  deep_mine.py  factory.py  forest.py  idle_hero.py  space_colony.py  stock_market.py
src/thatstui/visuals/: __init__.py  fire.py  fish_tank.py  fractal_tree.py  life.py  matrix.py  plasma.py  snake.py  starfield.py  tamagotchi.py
